--- a/index.html
+++ b/index.html
@@ -55,8 +55,31 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia nemo illum quia maxime quod labore impedit libero voluptas atque ratione corporis debitis, at nisi dolores excepturi quaerat asperiores odio molestiae.
                 </div>
             </div>
-            <div class="row">
 
+
+        </div>
+    </div>
+    </div>
+
+    <br>
+
+    <!-- screen resulation responsive all device-->
+
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem voluptatem maxime voluptatibus unde repellendus! Neque, ipsum vitae. Possimus culpa impedit ad blanditiis architecto dolore ipsa, excepturi est quisquam omnis incidunt
+                        voluptate similique cum, cumque placeat sit esse voluptas at sed? Accusamus in dignissimos vel dolorem quisquam quasi voluptatibus optio quis suscipit, illo officia tenetur placeat, repellendus molestias. Nemo ab, dolor sint maiores
+                        sequi, velit aperiam fugit saepe earum pariatur a. Exercitationem non error dolorem commodi illo reiciendis vero doloremque corrupti, repellendus sint ex soluta possimus nisi saepe deserunt, quos modi. Nihil soluta possimus quos
+                        id, cum autem dolor rerum ut veniam delectus. Repudiandae qui labore ut. Ut, dolorum asperiores. Esse, itaque, nisi adipisci quam assumenda quos debitis earum at expedita molestias impedit dolor exercitationem. Ratione sint quis
+                        cupiditate inventore harum at voluptatem hic, maxime quibusdam quaerat commodi quasi, dolorem recusandae labore veritatis animi velit saepe architecto quod! Ipsam doloremque iste optio, maiores voluptatibus, hic ex quo a soluta,
+                        inventore aspernatur quas! Eum recusandae laudantium magni repudiandae minus consectetur delectus, ipsam itaque in! Ducimus odio aut libero officia. Quasi, optio. Harum, explicabo doloremque. Veniam quo qui molestias deleniti dolorum
+                        animi omnis temporibus nihil culpa saepe sequi incidunt aliquam eligendi et in obcaecati, dignissimos nulla distinctio, veritatis, totam sunt ratione magnam aliquid? Velit quas pariatur cumque repudiandae atque accusantium eligendi
+                        fugit, possimus, unde porro quos laboriosam rem perspiciatis alias vitae, rerum dolores architecto ullam quia commodi expedita. Cumque provident alias adipisci vel dolores et? Ut quibusdam a, repudiandae rerum voluptates sunt placeat
+                        nam consequuntur tempora voluptas eveniet nobis consequatur fuga sed error incidunt nostrum excepturi ea! Molestias sapiente id consequatur. Ab pariatur odio aliquid fugiat optio minus amet ut impedit. Blanditiis quae, magni corrupti,
+                        culpa dolore explicabo ab sunt nisi fugiat officiis, unde possimus. Temporibus numquam quo voluptate impedit natus necessitatibus minus!</p>
+                </div>
             </div>
         </div>
     </div>
